--- a/index.html
+++ b/index.html
@@ -6,32 +6,47 @@
         <title>Landing Page</title>
     </head>
     <body>
-        <img alt="Logo">
-        <a>Link One</a>
-        <a>Link Two</a>
-        <a>Link Three</a>
-
-        <h1>This Website Is Awesome</h1>
-        <p>This website has some subtext</p>
-        <button>Sign Up</button>
-        <img alt="Placeholder Image">
-
-        <h2>Some random information</h2>
-        <img alt="image">
-        <p>Subtext under image</p>
-        <img alt="image">
-        <p>Subtext under image</p>
-        <img alt="image">
-        <p>Subtext under image</p>
-        <img alt="image">
-        <p>Subtext under image</p>
-
-        <p>Quote, testimonial, etc</p>
-
-        <h3>Call to action</h3>
-        <p>Sign up</p>
-        <button>Sign Up</button>
-
-        <p>Copyright</p>
+        <div class="header">
+            <div class="first-row">
+                <img alt="Logo">
+                <a>Link One</a>
+                <a>Link Two</a>
+                <a>Link Three</a>
+            </div>
+            <div class="second-row">
+                <div  class="header-text">
+                    <h1>This Website Is Awesome</h1>
+                    <p>This website has some subtext</p>
+                    <button>Sign Up</button>
+                </div>
+                <div class="header-image"><img alt="Placeholder Image"></div>
+            </div>
+        </div>
+        <div class="upper-middle">
+            <h2>Some random information</h2>
+            <div class="image">
+                <img alt="image">
+                <img alt="image">
+                <img alt="image">
+                <img alt="image">
+            </div>
+            <div class="image-subtext">
+                <p>Subtext under image</p>
+                <p>Subtext under image</p>
+                <p>Subtext under image</p>
+                <p>Subtext under image</p>
+            </div>
+        </div>
+        <div class="middle-middle">
+            <p>Quote, testimonial, etc</p>
+        </div>
+        <div class="bottom-middle">
+            <h3>Call to action</h3>
+            <p>Sign up</p>
+            <button>Sign Up</button>
+        </div>
+        <div class="footer">
+            <p>Copyright</p>
+        </div>
     </body>
 </html>
