--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <body>
         <div class="header">
             <div class="first-row">
-                <img alt="Logo">
-                <a>Link One</a>
+                <div class="left"><img alt="Logo"></div>
+                <div class="right"><a>Link One</a>
                 <a>Link Two</a>
-                <a>Link Three</a>
+                <a>Link Three</a></div>
             </div>
             <div class="second-row">
-                <div  class="header-text">
+                <div  class="header-text left">
                     <h1>This Website Is Awesome</h1>
                     <p>This website has some subtext</p>
                     <button>Sign Up</button>
                 </div>
-                <div class="header-image"><img alt="Placeholder Image"></div>
+                <div class="header-image right"><img alt="Placeholder Image"></div>
             </div>
         </div>
         <div class="upper-middle">
-            <h2>Some random information</h2>
+            <div class="center"><h2>Some random information</h2></div>
             <div class="image">
                 <img alt="image">
                 <img alt="image">
@@ -42,9 +42,9 @@
             <p>Quote, testimonial, etc</p>
         </div>
         <div class="bottom-middle">
-            <h3>Call to action</h3>
-            <p>Sign up</p>
-            <button>Sign Up</button>
+            <div class="left"><h3>Call to action</h3>
+            <p>Sign up</p></div>
+            <div class="right"><button>Sign Up</button></div>
         </div>
         <div class="footer">
             <p>Copyright</p>
