change div for images

--- a/index.html
+++ b/index.html
@@ -26,16 +26,20 @@
         <div class="upper-middle">
             <div class="center"><h2>Some random information</h2></div>
             <div class="image">
+                <div class="image-and-subtext">
                 <img alt="image">
+                <p>Subtext under image</p></div>
+                <div class="image-and-subtext">
                 <img alt="image">
+                <p>Subtext under image</p></div>
+                <div class="image-and-subtext">
                 <img alt="image">
+                <p>Subtext under image</p></div>
+                <div class="image-and-subtext">
                 <img alt="image">
+                <p>Subtext under image</p></div>
             </div>
-            <div class="image-subtext">
-                <p>Subtext under image</p>
-                <p>Subtext under image</p>
-                <p>Subtext under image</p>
-                <p>Subtext under image</p>
+            
             </div>
         </div>
         <div class="middle-middle">
