add styling to header of landing page

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <body>
         <div class="header">
             <div class="first-row">
-                <div class="left"><img alt="Logo"></div>
-                <div class="right"><a>Link One</a>
+                <div class="left" id="header-logo">Header Logo</div>
+                <div class="right" id="header-links"><a>Link One</a>
                 <a>Link Two</a>
                 <a>Link Three</a></div>
             </div>
             <div class="second-row">
                 <div  class="header-text left">
                     <h1>This Website Is Awesome</h1>
-                    <p>This website has some subtext</p>
+                    <p id="secondary-text">This website has some subtext</p>
                     <button>Sign Up</button>
                 </div>
                 <div class="header-image right"><img alt="Placeholder Image"></div>
