complete styling for header

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <div  class="header-text left">
                     <h1>This Website Is Awesome</h1>
                     <p id="secondary-text">This website has some subtext</p>
-                    <button>Sign Up</button>
+                    <button id="header-button">Sign Up</button>
                 </div>
-                <div class="header-image right"><img alt="Placeholder Image"></div>
+                <div class="header-image right"><img alt="Placeholder Image" src="./assets/wordpress-3288420_1280.png" id="header-image"></div>
             </div>
         </div>
         <div class="upper-middle">
