complete styling for middle section of landing page

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             <div class="center"><h2>Some random information</h2></div>
             <div class="image">
                 <div class="image-and-subtext">
-                <img alt="image">
+                <img class="image-and-subtext" alt="image" src="./assets/groove-box-8893757_1280.png">
                 <p>Subtext under image</p></div>
                 <div class="image-and-subtext">
-                <img alt="image">
+                <img class="image-and-subtext" alt="image" src="./assets/groovebox-8832172_1280.png">
                 <p>Subtext under image</p></div>
                 <div class="image-and-subtext">
-                <img alt="image">
+                <img class="image-and-subtext" alt="image" src="./assets/isometry-8445844_1280.png">
                 <p>Subtext under image</p></div>
                 <div class="image-and-subtext">
-                <img alt="image">
+                <img class="image-and-subtext" alt="image" src="./assets/midi-6389392_1280.png">
                 <p>Subtext under image</p></div>
             </div>
             
