update html to credit creators

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="second-row">
                 <div  class="header-text left">
                     <h1>This Website Is Awesome</h1>
-                    <p id="secondary-text">This website has some subtext</p>
+                    <p id="secondary-text">The art next to this text was made by Fauno on Pixabay.</p>
                     <button id="header-button">Sign Up</button>
                 </div>
                 <div class="header-image right"><img alt="Placeholder Image" src="./assets/wordpress-3288420_1280.png" id="header-image"></div>
@@ -28,16 +28,16 @@
             <div class="image">
                 <div class="image-and-subtext">
                 <img class="image-and-subtext" alt="image" src="./assets/groove-box-8893757_1280.png">
-                <p>Subtext under image</p></div>
+                <p>These arts</p></div>
                 <div class="image-and-subtext">
                 <img class="image-and-subtext" alt="image" src="./assets/groovebox-8832172_1280.png">
-                <p>Subtext under image</p></div>
+                <p>are made</p></div>
                 <div class="image-and-subtext">
                 <img class="image-and-subtext" alt="image" src="./assets/isometry-8445844_1280.png">
-                <p>Subtext under image</p></div>
+                <p>by ReSampled</p></div>
                 <div class="image-and-subtext">
                 <img class="image-and-subtext" alt="image" src="./assets/midi-6389392_1280.png">
-                <p>Subtext under image</p></div>
+                <p>on Pixabay.</p></div>
             </div>
             
             </div>
