--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="middle-middle">
-            <p>Quote, testimonial, etc</p>
+            <p id="quote">Everybody can extract caffeine, but if you judge a fish by it's ability to make caffeine, then it will live it's whole life in caffeine because caffeine, caffeine, caffeine.<br>-Albert Einstein<br>-MrGreenGuy(NileGreen)</p>
         </div>
         <div class="bottom-middle">
             <div class="left"><h3>Call to action</h3>
