--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         </div>
         <div class="bottom-middle">
             <div class="left"><h3>Call to action</h3>
-            <p>Sign up</p></div>
-            <div class="right"><button>Sign Up</button></div>
+            <p>Sign up to get free benefits or sumn ionno</p></div>
+            <div class="right"><button id="bottom-button">Sign Up</button></div>
         </div>
         <div class="footer">
-            <p>Copyright</p>
+            <p>Copyright (Not Really)</p>
         </div>
     </body>
 </html>
