--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
                     <p id="secondary-text">The art next to this text was made by Fauno on Pixabay.</p>
                     <button id="header-button">Sign Up</button>
                 </div>
-                <div class="header-image right"><img alt="Placeholder Image" src="./assets/wordpress-3288420_1280.png" id="header-image"></div>
+                <div class="header-image right"><img alt="Placeholder Image" src="https://cdn.pixabay.com/photo/2018/04/03/23/29/wordpress-3288420_960_720.png" id="header-image"></div>
             </div>
         </div>
         <div class="upper-middle">
             <div class="center"><h2>Some random information</h2></div>
             <div class="image">
                 <div class="image-and-subtext">
-                <img class="image-and-subtext" alt="image" src="./assets/groove-box-8893757_1280.png">
+                <img class="image-and-subtext" alt="image" src="https://cdn.pixabay.com/photo/2024/07/14/06/42/groove-box-8893757_960_720.png">
                 <p>These arts</p></div>
                 <div class="image-and-subtext">
-                <img class="image-and-subtext" alt="image" src="./assets/groovebox-8832172_1280.png">
+                <img class="image-and-subtext" alt="image" src="https://cdn.pixabay.com/photo/2024/07/17/17/20/keyboard-8902054_960_720.png">
                 <p>are made</p></div>
                 <div class="image-and-subtext">
-                <img class="image-and-subtext" alt="image" src="./assets/isometry-8445844_1280.png">
+                <img class="image-and-subtext" alt="image" src="https://cdn.pixabay.com/photo/2023/12/12/20/18/isometry-8445844_960_720.png">
                 <p>by ReSampled</p></div>
                 <div class="image-and-subtext">
-                <img class="image-and-subtext" alt="image" src="./assets/midi-6389392_1280.png">
+                <img class="image-and-subtext" alt="image" src="https://cdn.pixabay.com/photo/2024/06/15/20/24/groovebox-8832172_960_720.png">
                 <p>on Pixabay.</p></div>
             </div>
             
